--- a/InOutLog.Desk/MainWindow.xaml
+++ b/InOutLog.Desk/MainWindow.xaml
@@ -9,7 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="{Binding Title}"
     Width="300"
-    Height="210"
+    Height="255"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     WindowStyle="SingleBorderWindow"
@@ -77,6 +77,10 @@
                 <!--  breakin  -->
                 <RowDefinition Height="35" />
                 <!--  breakout  -->
+                <RowDefinition Height="35" />
+                <!--  divider  -->
+                <RowDefinition Height="10" />
+                <!--  reset  -->
                 <RowDefinition Height="35" />
             </Grid.RowDefinitions>
 
@@ -162,6 +166,37 @@
                 Grid.Column="2"
                 Style="{StaticResource TextClock}"
                 Text="{Binding Watcher.State.Data.BreakInTime, Converter={StaticResource SpanConverter}}" />
+
+            <!--  divider  -->
+
+            <TextBlock
+                Grid.Row="6"
+                Grid.Column="1"
+                Grid.ColumnSpan="2"
+                HorizontalAlignment="Left" VerticalAlignment="Center"
+                Text="-------------------------------------" />
+
+            <!--  reset  -->
+
+            <Button
+                Grid.Row="7"
+                Grid.Column="0"
+                Width="70"
+                Height="30"
+                Command="{Binding Watcher.ResetCommand}">
+                Reset
+            </Button>
+            <TextBlock
+                Grid.Row="7"
+                Grid.Column="1"
+                HorizontalAlignment="Center"
+                Style="{StaticResource TextClock}"
+                Text="TOTAL: " />
+            <TextBlock
+                Grid.Row="7"
+                Grid.Column="2"
+                Style="{StaticResource TextClock}"
+                Text="{Binding Watcher.State.Data.WorkingTime, Converter={StaticResource SpanConverter}}" />
 
 
         </Grid>
