--- a/InOutLog.Desk/MainWindow.xaml
+++ b/InOutLog.Desk/MainWindow.xaml
@@ -69,7 +69,7 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             Background="White" Opacity="0.70" Panel.ZIndex="10000"
-            Visibility="{Binding ScreenManager.IsBusy, Converter={StaticResource VisibilityConverter}}">
+            Visibility="{Binding ViewManager.IsBusy, Converter={StaticResource VisibilityConverter}}">
 
                 <TextBlock HorizontalAlignment="Center" 
                            VerticalAlignment="Center" 
@@ -87,35 +87,28 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             Background="White"
-            Visibility="{Binding ScreenManager.IsAuth, Converter={StaticResource VisibilityConverter}}"
-            IsEnabled="{Binding ScreenManager.IsBusy, Converter={StaticResource BooleanInverter}}">
+            Visibility="{Binding ViewManager.IsAuth, Converter={StaticResource VisibilityConverter}}"
+            IsEnabled="{Binding ViewManager.IsBusy, Converter={StaticResource BooleanInverter}}">
+
+            <Grid.DataContext>
+                <core:AuthViewModel />
+            </Grid.DataContext>
 
             <Grid.RowDefinitions>
                 <!--  username label  -->
                 <RowDefinition Height=".50*" />
-                <!--  divider  -->
-                <RowDefinition Height="5" />
                 <!--  sign in button  -->
                 <RowDefinition Height=".50*" />
             </Grid.RowDefinitions>
 
-            <!--  username label  -->
-
-            <!--{Binding AuthViewModel.Username}-->
-            <TextBlock
-                Grid.Row="0"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Bottom"
-                Text="ivan.kopcanski" />
-
             <!--  sign in button  -->
 
             <Button
-                Grid.Row="3"
+                Grid.Row="1"
                 Width="80"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
-                Command="{Binding AuthViewModel.SignInCommand}">
+                Command="{Binding SignInCommand}">
                 Sign in
             </Button>
 
@@ -127,8 +120,8 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             Background="White" 
-            Visibility="{Binding ScreenManager.IsReady, Converter={StaticResource VisibilityConverter}}"
-            IsEnabled="{Binding ScreenManager.IsBusy, Converter={StaticResource BooleanInverter}}">
+            Visibility="{Binding ViewManager.IsReady, Converter={StaticResource VisibilityConverter}}"
+            IsEnabled="{Binding ViewManager.IsBusy, Converter={StaticResource BooleanInverter}}">
 
             <i:Interaction.Triggers>
                 <ei:PropertyChangedTrigger Binding="{Binding Visibility, ElementName=WatcherGrid}">
