--- a/InOutLog.Droid/Resources/layout/Main.axml
+++ b/InOutLog.Droid/Resources/layout/Main.axml
@@ -111,3 +111,17 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </TableRow>
 </TableLayout>
+
+<!--<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:gravity="center">
+  <Button
+      android:id="@+id/SignInButton"
+      android:layout_width="150dip"
+      android:layout_height="wrap_content"
+      android:gravity="center"
+      android:text="SIGN IN" />
+</LinearLayout>-->
